BUG-FIX: Fixed alignment issues in restaurants and landing page

--- a/Frontend/Static/styles/Landing.css
+++ b/Frontend/Static/styles/Landing.css
@@ -220,16 +220,7 @@ nav a img {
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.card {
-  background-color: #F4F3F1;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  text-align: center;
-}
+
 
 /* Footer */
 footer {
