--- a/Frontend/Static/styles/Profile.css
+++ b/Frontend/Static/styles/Profile.css
@@ -303,7 +303,7 @@ footer {
   }
 
   .main-content{
-    padding :13rem 2rem;
+    padding :8rem;
   }
 
 
